cau3/access-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-web
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: web2
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: accepted
      ports:
        - protocol: TCP
          port: 80
