cau3/default-deny-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ingress
spec:
  podSelector:
    matchLabels:
      namespace: default
  ingress: []
